Added responsive + dark mode behavior

--- a/index.html
+++ b/index.html
@@ -81,9 +81,8 @@
 
         <!-- Tiles -->
         <div class='row content'>
-
             <!-- Headliners -->
-            <a href='https://ramp.com' target='_blank' rel='noopener' class='column tile tl' id='hero'>
+            <a href='https://ramp.com' target='_blank' rel='noopener' class='column tile tl'>
                 <div class='column top'>
                     <svg class='icon-l'><use href='images/sprites.svg#Ramp'></use></svg> 
                     <h2>Ramp</h2>
@@ -92,7 +91,8 @@
                     <p class='sh1'>Automating finance things · 2022 — <span id='flashing'>█</span></p>
                 </div>
             </a>
-            <a href='https://creators.instagram.com' target='_blank' rel='noopener' class='column tile tl'>
+
+            <a href='https://creators.instagram.com' target='_blank' rel='noopener' class='column tile tl web-only'>
                 <div class='column top'>
                     <svg class='icon-l'><use href='images/sprites.svg#Instagram'></use></svg> 
                     <h2>Instagram</h2>
@@ -101,40 +101,58 @@
                     <p class='sh1'>Building cool video stuff · 2021 — 2022</p>
                 </div>
             </a>
+
             <!-- Tile stack -->
             <div class='column' id='tile-stack'>
+
+                <a href='https://creators.instagram.com' target='_blank' rel='noopener' class='column tile ts mobile-only'>
+                    <div class='column top'>
+                        <svg class='icon-s'><use href='images/sprites.svg#Instagram'></use></svg> 
+                        <h3>Instagram</h3>
+                    </div>
+                    <div class='row bottom'>
+                        <p class='sh3'>Building cool video stuff</p>
+                    </div>
+                </a>
+
                 <a href='https://www.patchrx.io' target='_blank' rel='noopener' class='column tile ts'>
                     <div class='column top'>
                         <svg class='icon-s'><use href='images/sprites.svg#PatchRx'></use></svg> 
-                        <h4>PatchRx</h4>
+                        <h3>PatchRx</h3>
                     </div>
                     <div class='row bottom'>
-                        <p class='sh3'>Helping people remember medication</p>
+                        <p class='sh3'>Helping people remember medicine</p>
                     </div>
                 </a>
+
                 <a href='https://primer.style' target='_blank' rel='noopener' class='column tile ts'>
                     <div class='column top'>
                         <svg class='icon-s'><use href='images/sprites.svg#GitHub'></use></svg> 
-                        <h4>GitHub</h4>
+                        <h3>GitHub</h3>
                     </div>
                     <div class='row bottom'>
                         <p class='sh3'>Speeding up designer workflows</p>
                     </div>
                 </a>
+
                 <a href='https://blog.prototypr.io/starbucks-for-people-not-machines-92e6651c2af7' target='_blank' rel='noopener' class='column tile ts'>
                     <div class='column top'>
                         <svg class='icon-s'><use href='images/sprites.svg#Starbucks'></use></svg> 
-                        <h4>Starbucks</h4>
+                        <h3>Starbucks</h3>
                     </div>
                     <div class='row bottom'>
                         <p class='sh3'>Sharing drinks with friends</p>
                     </div>
                 </a>
-            </div>
 
+            </div>
+            
         </div>
+
+        <div class='row' id='spacer'></div>
     </main>
 
+    
     <!-- Footer -->
     <footer class='row'>
         <!-- Logo -->
