--- a/about.html
+++ b/about.html
@@ -42,6 +42,7 @@
     <meta name='twitter:image:src' content='https://zainkho.com/zk-screenshot.png'/>
 </head>
 
+
 <body class='column'>
     <!-- Header -->
     <header class='row'>
@@ -73,7 +74,7 @@
         </div>
 
         <!-- Content -->
-        <div class='row' id='bio'>
+        <div class='row content' id='bio'>
 
             <div class='column'>
                 <p class='p1'>
@@ -91,6 +92,7 @@
 
         </div>
     </main>
+
 
     <!-- Footer -->
     <footer class='row'>
