--- a/magic.html
+++ b/magic.html
@@ -42,6 +42,7 @@
     <meta name='twitter:image:src' content='https://zainkho.com/zk-screenshot.png'/>
 </head>
 
+
 <body class='column'>
     <!-- Header -->
     <header class='row'>
@@ -76,60 +77,49 @@
         </div>
 
         <!-- Content -->
-        <div class='row content'>
-            <div class='column content'>
-                <div class='row media'>
-                    <video autoplay loop muted src='images/magic/3d-anvil.mp4'></video>
-                </div>
-                <img alt='nasties thrasher sticker' src='images/magic/nasties-thrasher-sticker.png' class='media graphic'>
-                <div class='row media'>
-                    <video autoplay loop muted src='images/magic/record-player.mp4'></video>
-                </div>
-                <div class='column'>
-                    <div class='row media'>
-                        <video autoplay loop muted src='images/magic/magic-qr-code.mp4'></video>
-                    </div>
-                    <a href='https://x.com/benjitaylor/status/1641811921417695232?s=20' target='_blank' rel='noopener' class='row sh3 caption'>
-                       See inspiration →
-                    </a>
-                </div>
+        <div class='media-grid'>
+            <div class='row media'>
+                <video autoplay loop muted src='images/magic/3d-anvil.mp4'></video>
             </div>
-            <div class='column content'>
-                <div class='column'>
-                    <div class='row media'>
-                        <video autoplay loop muted src='images/magic/metal-card.mp4'></video>
-                    </div>
-                    <a href='https://x.com/alexwidua/status/1630998774247030786?s=20' target='_blank' rel='noopener' class='row sh3 caption'>
-                        See inspiration →
-                    </a>
-                </div>    
-                <img alt='imessage ehub sticker' src='images/magic/imessage-ehub-sticker.png' class='media graphic'>
-                <img alt='appdev retro hoodie' src='images/magic/appdev-retro-hoodie.png' class='media graphic'>
-                <img alt='college ave sticker' src='images/magic/college-ave-sticker.png' class='media graphic'>
+            <img alt='nasties thrasher sticker' src='images/magic/nasties-thrasher-sticker.png' class='media graphic'>
+            <div class='row media'>
+                <video autoplay loop muted src='images/magic/record-player.mp4'></video>
             </div>
-            <div class='column content'>
-                <img alt='appdev gimme sticker' src='images/magic/appdev-gimme-sticker.png' class='media graphic'>
+            <div class='column'>
                 <div class='row media'>
-                    <video autoplay loop muted src='images/magic/3d-ice-cream.mp4'></video>
+                    <video autoplay loop muted src='images/magic/magic-qr-code.mp4'></video>
                 </div>
-                <div class='row media'>
-                    <video autoplay loop muted src='images/magic/eatery-blue-refresh.mp4'></video>
-                </div>
-                <img alt='no winter maintenance sign sticker' src='images/magic/winter-sign-sticker.png' class='media graphic'>
+                <a href='https://x.com/benjitaylor/status/1641811921417695232?s=20' target='_blank' rel='noopener' class='row sh3 caption'>
+                    See inspiration →
+                </a>
             </div>
-            <div class='column content'>
-                <div class='row media'>
-                    <img alt='ramp coasters' src='images/magic/ramp-coasters.jpg'>
-                </div>
-                <img alt='collegetown bagels sticker' src='images/magic/CTB-sticker.png' class='media graphic'>
-                <div class='row media'>
-                    <video autoplay loop muted src='images/magic/3d-card.mp4'></video>
-                </div>
-                <img alt='theta tau crewneck' src='images/magic/tt-crewneck.png' class='media graphic'>
+            <img alt='imessage ehub sticker' src='images/magic/imessage-ehub-sticker.png' class='media graphic'>
+            <div class='row media'>
+                <video autoplay loop muted src='images/magic/eatery-blue-refresh.mp4'></video>
             </div>
-
+            <img alt='ramp coasters' src='images/magic/ramp-coasters.jpg' class='media'>
+            <div class='row media'>
+                <video autoplay loop muted src='images/magic/3d-ice-cream.mp4'></video>
+            </div>
+            <img alt='appdev retro hoodie' src='images/magic/appdev-retro-hoodie.png' class='media graphic'>
+            <img alt='college ave sticker' src='images/magic/college-ave-sticker.png' class='media graphic'>
+            <img alt='appdev gimme sticker' src='images/magic/appdev-gimme-sticker.png' class='media graphic'>
+            <div class='column'>
+                <div class='row media'>
+                    <video autoplay loop muted src='images/magic/metal-card.mp4'></video>
+                </div>
+                <a href='https://x.com/alexwidua/status/1630998774247030786?s=20' target='_blank' rel='noopener' class='row sh3 caption'>
+                    See inspiration →
+                </a>
+            </div>
+            <img alt='collegetown bagels sticker' src='images/magic/CTB-sticker.png' class='media graphic'>
+            <div class='row media'>
+                <video autoplay loop muted src='images/magic/3d-card.mp4'></video>
+            </div>
+            <img alt='theta tau crewneck' src='images/magic/tt-crewneck.png' class='media graphic'>
         </div>
     </main>
+
 
     <!-- Footer -->
     <footer class='row'>
