Add detecting user location + getting weather at that location

--- a/about.html
+++ b/about.html
@@ -15,13 +15,9 @@
     <!-- CSS -->
     <link rel='stylesheet' href='css/style.css' type='text/css'>
 
-    <!-- Javascript -->
-    <!-- TBD TBD TBD -->
-
     <!-- Favicons -->
     <link href='images/zk-favicon-light.ico' rel='icon' media='(prefers-color-scheme: light)'>
     <link href='images/zk-favicon-dark.ico' rel='icon' media='(prefers-color-scheme: dark)'>
-
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src='https://www.googletagmanager.com/gtag/js?id=UA-89012104-2'></script>
@@ -128,6 +124,7 @@
     </footer>
 </body>
 
-</html>
+<!-- JS -->
+<script type="text/javascript" src="js/script.js"></script>
 
 </html>
