--- a/magic.html
+++ b/magic.html
@@ -15,9 +15,6 @@
     <!-- CSS -->
     <link rel='stylesheet' href='css/style.css' type='text/css'>
 
-    <!-- Javascript -->
-    <!-- TBD TBD TBD -->
-
     <!-- Favicons -->
     <link href='images/zk-favicon-light.ico' rel='icon' media='(prefers-color-scheme: light)'>
     <link href='images/zk-favicon-dark.ico' rel='icon' media='(prefers-color-scheme: dark)'>
@@ -155,6 +152,7 @@
     </footer>
 </body>
 
-</html>
+<!-- JS -->
+<script type="text/javascript" src="js/script.js"></script>
 
 </html>
