Add icon + text handling for different weather cases

--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
             <div class='row' id='subtitle'>
                 <p class='sh1'>Software (but also sometimes <a href='magic.html'>other stuff</a>) designer</p>
                 <div class='row' id='weather'>
-                    <svg><use href='images/sprites.svg#sun'></use></svg> 
-                    <span class='sh2'>72° & sunny</span>
+                    <svg id='weather_icon'></svg> 
+                    <span class='sh2' id='weather_description'></span>
                 </div>
             </div>
         </div>
@@ -184,6 +184,6 @@
 </body>
 
 <!-- JS -->
-<script type="text/javascript" src="js/script.js"></script>
+<script type='text/javascript' src='js/script.js'></script>
 
 </html>
