--- a/magic.html
+++ b/magic.html
@@ -153,6 +153,6 @@
 </body>
 
 <!-- JS -->
-<script type="text/javascript" src="js/script.js"></script>
+<script type='text/javascript' src='js/script.js'></script>
 
 </html>
