--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
             <div class='line' id='line-3'></div>
             <div class='line' id='line-4'></div>
         </div>
+
         <!-- Actions -->
         <nav class='row'>
             <a class='row button' id='selected'>
@@ -59,6 +60,24 @@
                 <svg><use href='images/sprites.svg#bookmark'></use></svg>
                 <span class='sh2'>About</span>
             </a>
+
+            <!-- Logo -->
+            <a href='/'><svg id='zk-logo'>
+                <defs>
+                    <!-- Definition for inset shadow that is used for zk-logo above -->
+                    <filter id='inset' x='0' y='0' width='40' height='41' filterUnits='userSpaceOnUse' color-interpolation-filters='sRGB'>
+                        <feFlood flood-opacity='0' result='BackgroundImageFix'/>
+                        <feBlend mode='normal' in='SourceGraphic' in2='BackgroundImageFix' result='shape'/>
+                        <feColorMatrix in='SourceAlpha' type='matrix' values='0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0' result='hardAlpha'/>
+                        <feOffset dy='1'/>
+                        <feGaussianBlur stdDeviation='0.5'/>
+                        <feComposite in2='hardAlpha' operator='arithmetic' k2='-1' k3='1'/>
+                        <feColorMatrix type='matrix' values='0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.25 0'/>
+                        <feBlend mode='normal' in2='shape' result='effect1_innerShadow_946_14435'/>
+                    </filter>
+                </defs>
+                <use href='images/sprites.svg#zk-logo' filter='url(#inset)'></use>
+            </svg></a>
         </nav>
     </header>
 
@@ -66,13 +85,7 @@
         <!-- Title -->
         <div class='column' id='title'>
             <h1>Zain Khoja</h1>
-            <div class='row' id='subtitle'>
-                <p class='sh1'>Software (but also sometimes <a href='magic.html'>other stuff</a>) designer</p>
-                <div class='row' id='weather'>
-                    <svg id='weather_icon'></svg> 
-                    <span class='sh2' id='weather_description'></span>
-                </div>
-            </div>
+            <p class='sh1' id='subtitle'>Software (but also sometimes <a href='magic.html' id='secret'>other stuff</a>) designer</p>
         </div>
 
         <!-- Tiles -->
@@ -146,28 +159,18 @@
         </div>
 
         <div class='row' id='spacer'></div>
+
     </main>
 
     
     <!-- Footer -->
     <footer class='row'>
-        <!-- Logo -->
-        <a href='/'><svg id='zk-logo'>
-            <defs>
-                <!-- Definition for inset shadow that is used for zk-logo above -->
-                <filter id='inset' x='0' y='0' width='40' height='41' filterUnits='userSpaceOnUse' color-interpolation-filters='sRGB'>
-                    <feFlood flood-opacity='0' result='BackgroundImageFix'/>
-                    <feBlend mode='normal' in='SourceGraphic' in2='BackgroundImageFix' result='shape'/>
-                    <feColorMatrix in='SourceAlpha' type='matrix' values='0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0' result='hardAlpha'/>
-                    <feOffset dy='1'/>
-                    <feGaussianBlur stdDeviation='0.5'/>
-                    <feComposite in2='hardAlpha' operator='arithmetic' k2='-1' k3='1'/>
-                    <feColorMatrix type='matrix' values='0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.25 0'/>
-                    <feBlend mode='normal' in2='shape' result='effect1_innerShadow_946_14435'/>
-                </filter>
-            </defs>
-            <use href='images/sprites.svg#zk-logo' filter='url(#inset)'></use>
-        </svg></a>
+        <!-- Weather -->
+        <div class='row' id='weather'>
+            <svg id='weather_icon'></svg> 
+            <span class='sh3' id='weather_description'></span>
+        </div>
+
         <!-- Links -->
         <nav class='row'>
             <a href='https://twitter.com/zainkho' target='_blank' rel='noopener' class='row button'>
@@ -181,9 +184,15 @@
             </a>
         </nav>
     </footer>
+
+    <!-- Weather effects -->
+    <div class='weather-effect'></div>
+    <div id='splash'></div>
+
 </body>
 
 <!-- JS -->
+<script type='text/javascript' src="js/tsparticles.min.js"></script>
 <script type='text/javascript' src='js/script.js'></script>
 
 </html>
