Messing with the logo

--- a/about.html
+++ b/about.html
@@ -62,10 +62,10 @@
             </a>
 
             <!-- Logo -->
-            <a href='/'><svg id='zk-logo'>
+            <a href='/' class='row'><svg class='icon-m' id='zk-logo'>
                 <defs>
                     <!-- Definition for inset shadow that is used for zk-logo above -->
-                    <filter id='inset' x='0' y='0' width='40' height='41' filterUnits='userSpaceOnUse' color-interpolation-filters='sRGB'>
+                    <filter id='inset' x='0' y='0' width='32' height='32' filterUnits='userSpaceOnUse' color-interpolation-filters='sRGB'>
                         <feFlood flood-opacity='0' result='BackgroundImageFix'/>
                         <feBlend mode='normal' in='SourceGraphic' in2='BackgroundImageFix' result='shape'/>
                         <feColorMatrix in='SourceAlpha' type='matrix' values='0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0' result='hardAlpha'/>
