--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
     <footer class='row'>
         <!-- Weather -->
         <div class='row' id='weather'>
-            <svg id='weather_icon'></svg> 
+            <svg id='weather-icon'></svg> 
             <span class='sh3' id='weather_description'></span>
         </div>
 
