--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
         <!-- Actions -->
         <nav class='row'>
             <a class='row button' id='selected'>
-                <svg><use href='images/sprites.svg#home'></use></svg>
+                <svg><use href='images/icons/sprites.svg#home'></use></svg>
                 <span class='sh2'>Home</span>
             </a>
             <a href='about.html' class='row button'>
-                <svg><use href='images/sprites.svg#bookmark'></use></svg>
+                <svg><use href='images/icons/sprites.svg#bookmark'></use></svg>
                 <span class='sh2'>About</span>
             </a>
 
@@ -76,7 +76,7 @@
                         <feBlend mode='normal' in2='shape' result='effect1_innerShadow_946_14435'/>
                     </filter>
                 </defs>
-                <use href='images/sprites.svg#zk-logo' filter='url(#inset)'></use>
+                <use href='images/icons/sprites.svg#zk-logo' filter='url(#inset)'></use>
             </svg></a>
         </nav>
     </header>
@@ -93,7 +93,7 @@
             <!-- Headliners -->
             <a href='https://ramp.com' target='_blank' rel='noopener' class='column tile tl'>
                 <div class='column top'>
-                    <svg class='icon-l'><use href='images/sprites.svg#Ramp'></use></svg> 
+                    <svg class='icon-l'><use href='images/icons/sprites.svg#Ramp'></use></svg> 
                     <h2>Ramp</h2>
                 </div>
                 <div class='row bottom'>
@@ -103,7 +103,7 @@
 
             <a href='https://creators.instagram.com' target='_blank' rel='noopener' class='column tile tl web-only'>
                 <div class='column top'>
-                    <svg class='icon-l'><use href='images/sprites.svg#Instagram'></use></svg> 
+                    <svg class='icon-l'><use href='images/icons/sprites.svg#Instagram'></use></svg> 
                     <h2>Instagram</h2>
                 </div>
                 <div class='row bottom'>
@@ -116,7 +116,7 @@
 
                 <a href='https://creators.instagram.com' target='_blank' rel='noopener' class='column tile ts mobile-only'>
                     <div class='column top'>
-                        <svg class='icon-s'><use href='images/sprites.svg#Instagram'></use></svg> 
+                        <svg class='icon-s'><use href='images/icons/sprites.svg#Instagram'></use></svg> 
                         <h3>Instagram</h3>
                     </div>
                     <div class='row bottom'>
@@ -126,7 +126,7 @@
 
                 <a href='https://www.patchrx.io' target='_blank' rel='noopener' class='column tile ts'>
                     <div class='column top'>
-                        <svg class='icon-s'><use href='images/sprites.svg#PatchRx'></use></svg> 
+                        <svg class='icon-s'><use href='images/icons/sprites.svg#PatchRx'></use></svg> 
                         <h3>PatchRx</h3>
                     </div>
                     <div class='row bottom'>
@@ -136,7 +136,7 @@
 
                 <a href='https://primer.style' target='_blank' rel='noopener' class='column tile ts'>
                     <div class='column top'>
-                        <svg class='icon-s'><use href='images/sprites.svg#GitHub'></use></svg> 
+                        <svg class='icon-s'><use href='images/icons/sprites.svg#GitHub'></use></svg> 
                         <h3>GitHub</h3>
                     </div>
                     <div class='row bottom'>
@@ -146,7 +146,7 @@
 
                 <a href='https://blog.prototypr.io/starbucks-for-people-not-machines-92e6651c2af7' target='_blank' rel='noopener' class='column tile ts'>
                     <div class='column top'>
-                        <svg class='icon-s'><use href='images/sprites.svg#Starbucks'></use></svg> 
+                        <svg class='icon-s'><use href='images/icons/sprites.svg#Starbucks'></use></svg> 
                         <h3>Starbucks</h3>
                     </div>
                     <div class='row bottom'>
@@ -174,13 +174,13 @@
         <!-- Links -->
         <nav class='row'>
             <a href='https://twitter.com/zainkho' target='_blank' rel='noopener' class='row button'>
-                <svg><use href='images/sprites.svg#twitter'></use></svg>
+                <svg><use href='images/icons/sprites.svg#twitter'></use></svg>
             </a>
             <a href='https://linkedin.com/in/zainkho' target='_blank' rel='noopener' class='row button'>
-                <svg><use href='images/sprites.svg#linkedin'></use></svg>   
+                <svg><use href='images/icons/sprites.svg#linkedin'></use></svg>   
             </a>
             <a href='zainkho-resume.pdf' target='_blank' rel='noopener' class='row button'>
-                <svg><use href='images/sprites.svg#briefcase'></use></svg>
+                <svg><use href='images/icons/sprites.svg#briefcase'></use></svg>
             </a>
         </nav>
     </footer>
