--- a/about.html
+++ b/about.html
@@ -53,11 +53,11 @@
         <!-- Actions -->
         <nav class='row'>
             <a href='/' class='row button'>
-                <svg><use href='images/icons/sprites.svg#home'></use></svg>
+                <svg><use href='images/sprites.svg#home'></use></svg>
                 <span class='sh2'>Home</span>
             </a>
             <a href='about.html' class='row button' id='selected'>
-                <svg><use href='images/icons/sprites.svg#bookmark'></use></svg>
+                <svg><use href='images/sprites.svg#bookmark'></use></svg>
                 <span class='sh2'>About</span>
             </a>
 
@@ -76,7 +76,7 @@
                         <feBlend mode='normal' in2='shape' result='effect1_innerShadow_946_14435'/>
                     </filter>
                 </defs>
-                <use href='images/icons/sprites.svg#zk-logo' filter='url(#inset)'></use>
+                <use href='images/sprites.svg#zk-logo' filter='url(#inset)'></use>
             </svg></a>
         </nav>
     </header>
@@ -120,13 +120,13 @@
         <!-- Links -->
         <nav class='row'>
             <a href='https://twitter.com/zainkho' target='_blank' rel='noopener' class='row button'>
-                <svg><use href='images/icons/sprites.svg#twitter'></use></svg>
+                <svg><use href='images/sprites.svg#twitter'></use></svg>
             </a>
             <a href='https://linkedin.com/in/zainkho' target='_blank' rel='noopener' class='row button'>
-                <svg><use href='images/icons/sprites.svg#linkedin'></use></svg>   
+                <svg><use href='images/sprites.svg#linkedin'></use></svg>   
             </a>
             <a href='zainkho-resume.pdf' target='_blank' rel='noopener' class='row button'>
-                <svg><use href='images/icons/sprites.svg#briefcase'></use></svg>
+                <svg><use href='images/sprites.svg#briefcase'></use></svg>
             </a>
         </nav>
     </footer>
