Add aria-labels for links without text

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             </a>
 
             <!-- Logo -->
-            <a href='/' class='row'><svg class='icon-m' id='zk-logo'>
+            <a href='/' aria-label='Go to homepage' class='row'><svg class='icon-m' id='zk-logo'>
                 <defs>
                     <!-- Definition for inset shadow that is used for zk-logo above -->
                     <filter id='inset' x='0' y='0' width='32' height='32' filterUnits='userSpaceOnUse' color-interpolation-filters='sRGB'>
@@ -173,13 +173,13 @@
 
         <!-- Links -->
         <nav class='row'>
-            <a href='https://twitter.com/zainkho' target='_blank' rel='noopener' class='row button'>
+            <a href='https://twitter.com/zainkho' aria-label='Visit my Twitter' target='_blank' rel='noopener' class='row button'>
                 <svg><use href='images/sprites.svg#twitter'></use></svg>
             </a>
-            <a href='https://linkedin.com/in/zainkho' target='_blank' rel='noopener' class='row button'>
+            <a href='https://linkedin.com/in/zainkho' aria-label='Visit my Linkedin' target='_blank' rel='noopener' class='row button'>
                 <svg><use href='images/sprites.svg#linkedin'></use></svg>   
             </a>
-            <a href='zainkho-resume.pdf' target='_blank' rel='noopener' class='row button'>
+            <a href='zainkho-resume.pdf' aria-label='View my resume' target='_blank' rel='noopener' class='row button'>
                 <svg><use href='images/sprites.svg#briefcase'></use></svg>
             </a>
         </nav>
