Update OG/Twitter preview links

--- a/magic.html
+++ b/magic.html
@@ -30,10 +30,17 @@
       gtag('config', 'UA-89012104-2');
     </script>
 
+    <!-- Open Graph preview -->
+    <meta property='og:url' content='https://zainkho.com'>
+    <meta property='og:type' content='website'>
+    <meta property='og:title' content='Zain Khoja'>
+    <meta property='og:description' content='Zain Khoja is a software (but also sometimes other stuff) designer'>
+    <meta property='og:image' content='https://zainkho.com/zk-screenshot.png'>
+
     <!-- Twitter preview -->
     <meta name='twitter:card' content='summary_large_image'/>
-    <meta name='twitter:site' content='@zainkho'/>
-    <meta name='twitter:creator' content='@zainkho'/>
+    <meta property='twitter:domain' content='zainkho.com'>
+    <meta property='twitter:url' content='https://zainkho.com'>
     <meta name='twitter:title' content='Zain Khoja'/>
     <meta name='twitter:description' content='Zain Khoja is a software (but also sometimes other stuff) designer'/>
     <meta name='twitter:image:src' content='https://zainkho.com/zk-screenshot.png'/>
@@ -166,7 +173,7 @@
 </body>
 
 <!-- JS -->
-<script type='text/javascript' src="js/tsparticles.min.js"></script>
+<script type='text/javascript' src='js/tsparticles.min.js'></script>
 <script type='text/javascript' src='js/script.js'></script>
 
 </html>
