Responsive and OG/social fixes

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                         <h3>PatchRx</h3>
                     </div>
                     <div class='row bottom'>
-                        <p class='sh3'>Helping people remember medicine</p>
+                        <p class='sh3'>Helping people track medicine</p>
                     </div>
                 </a>
 
