--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <meta property='og:type' content='website'>
     <meta property='og:title' content='Zain Khoja'>
     <meta property='og:description' content='Zain Khoja is a software (but also sometimes other stuff) designer'>
-    <meta property='og:image' content='zk-screenshot.png'>
+    <meta property='og:image' content='https://zainkho.com/zk-screenshot.png'>
 
     <!-- Twitter preview -->
     <meta name='twitter:card' content='summary_large_image'/>
@@ -42,7 +42,7 @@
     <meta property='twitter:url' content='https://zainkho.com'>
     <meta name='twitter:title' content='Zain Khoja'/>
     <meta name='twitter:description' content='Zain Khoja is a software (but also sometimes other stuff) designer'/>
-    <meta name='twitter:image' content='zk-screenshot.png'/>
+    <meta name='twitter:image' content='https://zainkho.com/zk-screenshot.png'/>
 </head>
 
 
