Change favicon dynamically via JS and update zk-screenshot

--- a/magic.html
+++ b/magic.html
@@ -16,8 +16,7 @@
     <link rel='stylesheet' href='css/style.css' type='text/css'>
 
     <!-- Favicons -->
-    <link href='images/zk-favicon-light.ico' rel='icon' media='(prefers-color-scheme: light)'>
-    <link href='images/zk-favicon-dark.ico' rel='icon' media='(prefers-color-scheme: dark)'>
+    <link href='images/zk-favicon-light.ico' rel='icon' id='favicon'>
 
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
