--- a/magic.html
+++ b/magic.html
@@ -95,7 +95,7 @@
         <!-- Title -->
         <div class='column' id='title'>
             <h1>The 'other stuff'</h1>
-            <p class='sh1' id='subtitle'>Digital and physical nonsense I like making</p>
+            <p class='sh1' id='subtitle'>Digital and physical nonsense I've made</p>
         </div>
 
         <!-- Content -->
