--- a/about.html
+++ b/about.html
@@ -33,15 +33,15 @@
     <meta property='og:type' content='website'>
     <meta property='og:title' content='Zain Khoja'>
     <meta property='og:description' content='Zain Khoja is a software (but also sometimes other stuff) designer'>
-    <meta property='og:image' content='https://zainkho.com/images/zk-screenshot-light.png' id='social-image'>
+    <meta property='og:image' content='https://zainkho.com/images/zk-screenshot-light.png' class='social-image'>
 
     <!-- Twitter preview -->
-    <meta name='twitter:card' content='summary_large_image'/>
+    <meta name='twitter:card' content='summary_large_image'>
     <meta property='twitter:domain' content='zainkho.com'>
     <meta property='twitter:url' content='https://zainkho.com'>
-    <meta name='twitter:title' content='Zain Khoja'/>
-    <meta name='twitter:description' content='Zain Khoja is a software (but also sometimes other stuff) designer'/>
-    <meta name='twitter:image' content='https://zainkho.com/images/zk-screenshot-light.png' id='social-image'/>
+    <meta name='twitter:title' content='Zain Khoja'>
+    <meta name='twitter:description' content='Zain Khoja is a software (but also sometimes other stuff) designer'>
+    <meta name='twitter:image' content='https://zainkho.com/images/zk-screenshot-light.png' class='social-image'>
 </head>
 
 
