Fix JS stuff for W3C

--- a/magic.html
+++ b/magic.html
@@ -168,14 +168,16 @@
         </nav>
     </footer>
 
+    
     <!-- Weather effects -->
     <div class='weather-effect'></div>
     <div id='splash'></div>
 
-</body>
 
-<!-- JS -->
-<script type='text/javascript' src='js/tsparticles.min.js'></script>
-<script type='text/javascript' src='js/script.js'></script>
+    <!-- JS -->
+    <script src='js/tsparticles.min.js'></script>
+    <script src='js/script.js'></script>
+
+</body>
 
 </html>
