--- a/about.html
+++ b/about.html
@@ -105,7 +105,7 @@
                     Before that, I was at Cornell where I went to some classes but mostly <a href='https://bit.ly/IntroDPDSP20' target='_blank' rel='noopener'>taught classes about design</a> <span class='sh2'>[some talented pupils — <a href='https://tisealatise.webflow.io' target='_blank' rel='noopener'>1</a>, <a href='https://emilyromero.notion.site/emilyromero/Yello-My-name-is-Emily-8734e7293ccb416b8372d45523b801ef' target='_blank' rel='noopener'>2</a>]</span>. In my free time, I met great friends and mentors without whom I wouldn't be here today <span class='sh2'>[aforementioned mentors — <a href='https://twitter.com/sahkho' target='_blank' rel='noopener'>1</a>, <a href='https://hasque.com' target='_blank' rel='noopener'>2</a>, <a href='https://gk3.website' target='_blank' rel='noopener'>3</a>]</span>. If you want to learn more about me, feel free to check out some of my inspirations <span class='sh2'>[<a href='https://www.are.na/zain-khoja' target='_blank' rel='noopener'>1</a>, <a href='https://letterboxd.com/zainkho/' target='_blank' rel='noopener'>2</a>, <a href='https://zainkho.notion.site/54a75ae80c6145b1b0e663aa9f942fe7?v=1bc2ffcb55d04f6fba1689a1a9c48086&pvs=4' target='_blank' rel='noopener'>3</a>]</span>.
                 </p>
                 <p class='p1'>
-                    If you want to find me, look for places that 1) celebrate Dallas sports, 2) serve sweet tea, or 3) brew local coffee before 9am. I also love seeing cool stuff; if you have something to show, <a href='mailto:zainkhoja7%40gmail.com?subject=Look%20I%20made%20something%20cool...' target='_blank' rel='noopener'>shoot me a message</a>.
+                    You can find me at <a href='https://maps.app.goo.gl/YexFTqwxCNSrojGu8' target='_blank'>Abraço</a> most Saturdays ~8am or on the internet <a href='https://twitter.com/zainkho' target='_blank'>@zainkho</a> probably posting stuff about Dallas sports. I also love seeing cool stuff; if you have something to show, <a href='mailto:zainkhoja7%40gmail.com?subject=Look%20I%20made%20something%20cool...' target='_blank' rel='noopener'>shoot me a message</a>.
                 </p>
             </div>
 
@@ -125,10 +125,10 @@
 
         <!-- Links -->
         <nav class='row'>
-            <a href='https://twitter.com/zainkho' aria-label='Visit my Twitter' target='_blank' rel='noopener' class='row button'>
+            <a href='https://twitter.com/zainkho' aria-label='@zainkho on Twitter' target='_blank' rel='noopener' class='row button'>
                 <svg><use href='images/sprites.svg#twitter'></use></svg>
             </a>
-            <a href='https://linkedin.com/in/zainkho' aria-label='Visit my Linkedin' target='_blank' rel='noopener' class='row button'>
+            <a href='https://linkedin.com/in/zainkho' aria-label='Zain Khoja on Linkedin' target='_blank' rel='noopener' class='row button'>
                 <svg><use href='images/sprites.svg#linkedin'></use></svg>   
             </a>
             <a href='zainkho-resume.pdf' aria-label='View my resume' target='_blank' rel='noopener' class='row button'>
