Make magic.html more obvious and fix its nav

--- a/about.html
+++ b/about.html
@@ -66,6 +66,9 @@
                 <svg><use href='images/sprites.svg#bookmark'></use></svg>
                 <span class='sh2'>About</span>
             </a>
+            <a href='magic.html' class='row button'>
+                <svg><use href='images/sprites.svg#magic'></use></svg>
+            </a>
 
             <!-- Logo -->
             <a href='/' aria-label='Go to homepage' class='row'><svg class='icon-m' id='zk-logo'>
