--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@
 <html lang='en'>
 
 <!-- Head -->
+
 <head>
     <meta charset='UTF-8'>
     <title>About · Zain Khoja</title>
@@ -21,11 +22,11 @@
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src='https://www.googletagmanager.com/gtag/js?id=UA-89012104-2'></script>
     <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
 
-      gtag('config', 'UA-89012104-2');
+        gtag('config', 'UA-89012104-2');
     </script>
 
     <!-- Open Graph preview -->
@@ -55,38 +56,46 @@
             <div class='line' id='line-3'></div>
             <div class='line' id='line-4'></div>
         </div>
-        
+
         <!-- Actions -->
         <nav class='row'>
             <a href='/' class='row button'>
-                <svg><use href='images/sprites.svg#home'></use></svg>
+                <svg>
+                    <use href='images/sprites.svg#home'></use>
+                </svg>
                 <span class='sh2'>Home</span>
             </a>
             <a href='about.html' class='row button' id='selected'>
-                <svg><use href='images/sprites.svg#bookmark'></use></svg>
+                <svg>
+                    <use href='images/sprites.svg#bookmark'></use>
+                </svg>
                 <span class='sh2'>About</span>
             </a>
             <a href='magic.html' class='row button'>
-                <svg><use href='images/sprites.svg#magic'></use></svg>
+                <svg>
+                    <use href='images/sprites.svg#magic'></use>
+                </svg>
             </a>
 
             <!-- Logo -->
             <a href='/' aria-label='Go to homepage' class='row'><svg class='icon-m' id='zk-logo'>
-                <defs>
-                    <!-- Definition for inset shadow that is used for zk-logo above -->
-                    <filter id='inset' x='0' y='0' width='32' height='32' filterUnits='userSpaceOnUse' color-interpolation-filters='sRGB'>
-                        <feFlood flood-opacity='0' result='BackgroundImageFix'/>
-                        <feBlend mode='normal' in='SourceGraphic' in2='BackgroundImageFix' result='shape'/>
-                        <feColorMatrix in='SourceAlpha' type='matrix' values='0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0' result='hardAlpha'/>
-                        <feOffset dy='1'/>
-                        <feGaussianBlur stdDeviation='0.5'/>
-                        <feComposite in2='hardAlpha' operator='arithmetic' k2='-1' k3='1'/>
-                        <feColorMatrix type='matrix' values='0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.25 0'/>
-                        <feBlend mode='normal' in2='shape' result='effect1_innerShadow_946_14435'/>
-                    </filter>
-                </defs>
-                <use href='images/sprites.svg#zk-logo' filter='url(#inset)'></use>
-            </svg></a>
+                    <defs>
+                        <!-- Definition for inset shadow that is used for zk-logo above -->
+                        <filter id='inset' x='0' y='0' width='32' height='32' filterUnits='userSpaceOnUse'
+                            color-interpolation-filters='sRGB'>
+                            <feFlood flood-opacity='0' result='BackgroundImageFix' />
+                            <feBlend mode='normal' in='SourceGraphic' in2='BackgroundImageFix' result='shape' />
+                            <feColorMatrix in='SourceAlpha' type='matrix'
+                                values='0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0' result='hardAlpha' />
+                            <feOffset dy='1' />
+                            <feGaussianBlur stdDeviation='0.5' />
+                            <feComposite in2='hardAlpha' operator='arithmetic' k2='-1' k3='1' />
+                            <feColorMatrix type='matrix' values='0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.25 0' />
+                            <feBlend mode='normal' in2='shape' result='effect1_innerShadow_946_14435' />
+                        </filter>
+                    </defs>
+                    <use href='images/sprites.svg#zk-logo' filter='url(#inset)'></use>
+                </svg></a>
         </nav>
     </header>
 
@@ -102,13 +111,33 @@
 
             <div class='column'>
                 <p class='p1'>
-                    As you probably saw on the home page, I'm a software designer. I currently live in New York City and work at Ramp.
+                    As you probably saw on the home page, I'm a software designer. I currently live in New York City and
+                    work at Ramp.
                 </p>
                 <p class='p1'>
-                    Before that, I was at Cornell where I went to some classes but mostly <a href='https://bit.ly/IntroDPDSP20' target='_blank' rel='noopener'>taught classes about design</a> <span class='sh2'>[some talented pupils — <a href='https://tisealatise.webflow.io' target='_blank' rel='noopener'>1</a>, <a href='https://emilyromero.notion.site/emilyromero/Yello-My-name-is-Emily-8734e7293ccb416b8372d45523b801ef' target='_blank' rel='noopener'>2</a>]</span>. In my free time, I met great friends and mentors without whom I wouldn't be here today <span class='sh2'>[aforementioned mentors — <a href='https://twitter.com/sahkho' target='_blank' rel='noopener'>1</a>, <a href='https://hasque.com' target='_blank' rel='noopener'>2</a>, <a href='https://gk3.website' target='_blank' rel='noopener'>3</a>]</span>. If you want to learn more about me, feel free to check out some of my inspirations <span class='sh2'>[<a href='https://www.are.na/zain-khoja' target='_blank' rel='noopener'>1</a>, <a href='https://letterboxd.com/zainkho/' target='_blank' rel='noopener'>2</a>, <a href='https://zainkho.notion.site/54a75ae80c6145b1b0e663aa9f942fe7?v=1bc2ffcb55d04f6fba1689a1a9c48086&pvs=4' target='_blank' rel='noopener'>3</a>]</span>.
+                    Before that, I was at Cornell where I went to some classes but mostly <a
+                        href='https://bit.ly/IntroDPDSP20' target='_blank' rel='noopener'>taught classes about
+                        design</a> <span class='sh2'>[some talented pupils — <a href='https://tisealatise.webflow.io'
+                            target='_blank' rel='noopener'>1</a>, <a
+                            href='https://emilyromero.notion.site/emilyromero/Yello-My-name-is-Emily-8734e7293ccb416b8372d45523b801ef'
+                            target='_blank' rel='noopener'>2</a>]</span>. In my free time, I met great friends and
+                    mentors without whom I wouldn't be here today <span class='sh2'>[aforementioned mentors — <a
+                            href='https://twitter.com/sahkho' target='_blank' rel='noopener'>1</a>, <a
+                            href='https://hasque.com' target='_blank' rel='noopener'>2</a>, <a
+                            href='https://gk3.website' target='_blank' rel='noopener'>3</a>]</span>. If you want to
+                    learn more about me, feel free to check out some of my inspirations <span class='sh2'>[<a
+                            href='https://www.are.na/zain-khoja' target='_blank' rel='noopener'>1</a>, <a
+                            href='https://letterboxd.com/zainkho/' target='_blank' rel='noopener'>2</a>, <a
+                            href='https://zainkho.notion.site/54a75ae80c6145b1b0e663aa9f942fe7?v=1bc2ffcb55d04f6fba1689a1a9c48086&pvs=4'
+                            target='_blank' rel='noopener'>3</a>]</span>.
                 </p>
                 <p class='p1'>
-                    You can find me at <a href='https://maps.app.goo.gl/YexFTqwxCNSrojGu8' target='_blank'>Abraço</a> most Saturdays ~8am or on the internet <a href='https://twitter.com/zainkho' target='_blank'>@zainkho</a> posting about Dallas sports. I also love seeing cool stuff; if you have something to show, <a href='mailto:zainkhoja7%40gmail.com?subject=Look%20I%20made%20something%20cool...' target='_blank' rel='noopener'>shoot me a message</a>.
+                    You can find me at <a href='https://maps.app.goo.gl/YexFTqwxCNSrojGu8' target='_blank'>Abraço</a>
+                    most Saturdays ~8am or on the internet <a href='https://twitter.com/zainkho'
+                        target='_blank'>@zainkho</a> posting about Dallas sports. I also love seeing cool stuff; if you
+                    have something to show, <a
+                        href='mailto:zainkhoja7%40gmail.com?subject=Look%20I%20made%20something%20cool...'
+                        target='_blank' rel='noopener'>shoot me a message</a>.
                 </p>
             </div>
 
@@ -122,20 +151,28 @@
     <footer class='row'>
         <!-- Weather -->
         <div class='row' id='weather'>
-            <svg id='weather-icon'></svg> 
+            <svg id='weather-icon'></svg>
             <span class='sh3' id='weather_description'></span>
         </div>
 
         <!-- Links -->
         <nav class='row'>
-            <a href='https://twitter.com/zainkho' aria-label='@zainkho on Twitter' target='_blank' rel='noopener' class='row button'>
-                <svg><use href='images/sprites.svg#twitter'></use></svg>
+            <a href='https://twitter.com/zainkho' aria-label='@zainkho on Twitter' target='_blank' rel='noopener'
+                class='row button'>
+                <svg>
+                    <use href='images/sprites.svg#twitter'></use>
+                </svg>
             </a>
-            <a href='https://linkedin.com/in/zainkho' aria-label='Zain Khoja on Linkedin' target='_blank' rel='noopener' class='row button'>
-                <svg><use href='images/sprites.svg#linkedin'></use></svg>   
+            <a href='https://linkedin.com/in/zainkho' aria-label='Zain Khoja on Linkedin' target='_blank' rel='noopener'
+                class='row button'>
+                <svg>
+                    <use href='images/sprites.svg#linkedin'></use>
+                </svg>
             </a>
             <a href='zainkho-resume.pdf' aria-label='View my resume' target='_blank' rel='noopener' class='row button'>
-                <svg><use href='images/sprites.svg#briefcase'></use></svg>
+                <svg>
+                    <use href='images/sprites.svg#briefcase'></use>
+                </svg>
             </a>
         </nav>
     </footer>
