Swap out avatar picture and update about.html

--- a/about.html
+++ b/about.html
@@ -141,7 +141,7 @@
                 </p>
             </div>
 
-            <img alt='avatar' src='images/zk-avi.png' id='avi'>
+            <img alt='avatar' src='images/zk-avi.jpg' id='avi'>
 
         </div>
     </main>
