--- a/about.html
+++ b/about.html
@@ -72,9 +72,9 @@
                 </svg>
                 <span class='sh2'>About</span>
             </a>
-            <a href='magic.html' class='row button'>
+            <a href='play.html' class='row button'>
                 <svg>
-                    <use href='images/sprites.svg#magic'></use>
+                    <use href='images/sprites.svg#play'></use>
                 </svg>
             </a>
 
