--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
                 </svg>
                 <span class='sh2'>About</span>
             </a>
-            <a href='magic.html' class='row button'>
+            <a href='play.html' class='row button'>
                 <svg>
-                    <use href='images/sprites.svg#magic'></use>
+                    <use href='images/sprites.svg#play'></use>
                 </svg>
             </a>
 
@@ -103,7 +103,7 @@
         <!-- Title -->
         <div class='column' id='title'>
             <h1>Zain Khoja</h1>
-            <p class='sh1' id='subtitle'>Software (but also sometimes <a href='magic.html' id='secret'>other stuff</a>)
+            <p class='sh1' id='subtitle'>Software (but also sometimes <a href='play.html' id='secret'>other stuff</a>)
                 designer</p>
         </div>
 
