--- a/play.html
+++ b/play.html
@@ -1,4 +1,4 @@
-<!-- Magic -->
+<!-- Playground -->
 
 <!DOCTYPE html>
 <html lang='en'>
@@ -7,7 +7,7 @@
 
 <head>
     <meta charset='UTF-8'>
-    <title>Other stuff · Zain Khoja</title>
+    <title>My playground · Zain Khoja</title>
     <meta name='description' content='Zain Khoja is a software (but also sometimes other stuff) designer'>
 
     <!-- Viewport -->
@@ -74,7 +74,7 @@
             </a>
             <a class='row button' id='selected'>
                 <svg>
-                    <use href='images/sprites.svg#magic'></use>
+                    <use href='images/sprites.svg#play'></use>
                 </svg>
             </a>
 
@@ -103,22 +103,22 @@
     <main class='column'>
         <!-- Title -->
         <div class='column' id='title'>
-            <h1>The other stuff</h1>
+            <h1>My playground</h1>
             <p class='sh1' id='subtitle'>Digital and physical nonsense I've made</p>
         </div>
 
         <!-- Content -->
         <div class='media-grid'>
             <div class='row media'>
-                <video autoplay loop muted playsinline src='images/magic/3d-anvil.mp4'></video>
+                <video autoplay loop muted playsinline src='images/play/3d-anvil.mp4'></video>
             </div>
-            <img alt='nasties thrasher sticker' src='images/magic/nasties-thrasher-sticker.png' class='media graphic'>
+            <img alt='nasties thrasher sticker' src='images/play/nasties-thrasher-sticker.png' class='media graphic'>
             <div class='row media'>
-                <video autoplay loop muted playsinline src='images/magic/record-player.mp4'></video>
+                <video autoplay loop muted playsinline src='images/play/record-player.mp4'></video>
             </div>
             <div class='column'>
                 <div class='row media'>
-                    <video autoplay loop muted playsinline src='images/magic/magic-qr-code.mp4'></video>
+                    <video autoplay loop muted playsinline src='images/play/play-qr-code.mp4'></video>
                 </div>
                 <a href='https://x.com/benjitaylor/status/1641811921417695232?s=20' target='_blank' rel='noopener'
                     class='row sh3 caption'>
@@ -126,33 +126,33 @@
                 </a>
             </div>
             <div class='row media'>
-                <video autoplay loop muted playsinline src='images/magic/ramp-mobile-loading.mp4'></video>
+                <video autoplay loop muted playsinline src='images/play/ramp-mobile-loading.mp4'></video>
             </div>
-            <img alt='imessage ehub sticker' src='images/magic/imessage-ehub-sticker.png' class='media graphic'>
+            <img alt='imessage ehub sticker' src='images/play/imessage-ehub-sticker.png' class='media graphic'>
             <div class='row media'>
-                <video autoplay loop muted playsinline src='images/magic/eatery-blue-refresh.mp4'></video>
+                <video autoplay loop muted playsinline src='images/play/eatery-blue-refresh.mp4'></video>
             </div>
-            <img alt='ramp coasters' src='images/magic/ramp-coasters.jpg' class='media'>
+            <img alt='ramp coasters' src='images/play/ramp-coasters.jpg' class='media'>
             <div class='row media'>
-                <video autoplay loop muted playsinline src='images/magic/3d-ice-cream.mp4'></video>
+                <video autoplay loop muted playsinline src='images/play/3d-ice-cream.mp4'></video>
             </div>
-            <img alt='appdev retro hoodie' src='images/magic/appdev-retro-hoodie.png' class='media graphic'>
-            <img alt='college ave sticker' src='images/magic/college-ave-sticker.png' class='media graphic'>
-            <img alt='appdev gimme sticker' src='images/magic/appdev-gimme-sticker.png' class='media graphic'>
+            <img alt='appdev retro hoodie' src='images/play/appdev-retro-hoodie.png' class='media graphic'>
+            <img alt='college ave sticker' src='images/play/college-ave-sticker.png' class='media graphic'>
+            <img alt='appdev gimme sticker' src='images/play/appdev-gimme-sticker.png' class='media graphic'>
             <div class='column'>
                 <div class='row media'>
-                    <video autoplay loop muted playsinline src='images/magic/metal-card.mp4'></video>
+                    <video autoplay loop muted playsinline src='images/play/metal-card.mp4'></video>
                 </div>
                 <a href='https://x.com/alexwidua/status/1630998774247030786?s=20' target='_blank' rel='noopener'
                     class='row sh3 caption'>
                     See inspiration →
                 </a>
             </div>
-            <img alt='collegetown bagels sticker' src='images/magic/CTB-sticker.png' class='media graphic'>
+            <img alt='collegetown bagels sticker' src='images/play/CTB-sticker.png' class='media graphic'>
             <div class='row media'>
-                <video autoplay loop muted playsinline src='images/magic/3d-card.mp4'></video>
+                <video autoplay loop muted playsinline src='images/play/3d-card.mp4'></video>
             </div>
-            <img alt='theta tau crewneck' src='images/magic/tt-crewneck.png' class='media graphic'>
+            <img alt='theta tau crewneck' src='images/play/tt-crewneck.png' class='media graphic'>
         </div>
     </main>
 
