Added bookmark icon + Substack links in footer

--- a/play.html
+++ b/play.html
@@ -179,6 +179,12 @@
                     <use href='images/sprites.svg#linkedin'></use>
                 </svg>
             </a>
+            <a href='https://drinkingsweettea.substack.com' aria-label='Drinking Sweet Tea newsletter on Substack'
+                target='_blank' rel='noopener' class='row button'>
+                <svg>
+                    <use href='images/sprites.svg#bookmark'></use>
+                </svg>
+            </a>
             <a href='zainkho-resume.pdf' aria-label='View my resume' target='_blank' rel='noopener' class='row button'>
                 <svg>
                     <use href='images/sprites.svg#briefcase'></use>
