Revert "Polaroid avatar 🤭"

--- a/about.html
+++ b/about.html
@@ -108,7 +108,7 @@
         </div>
 
         <!-- Content -->
-        <div class='row content'>
+        <div class='row content' id='bio'>
 
             <div class='column'>
                 <p class='p1'>
@@ -142,17 +142,14 @@
                 </p>
             </div>
 
-            <!-- <img alt='avatar' src='images/zk-avi.jpg' id='avi'> -->
-            <div id='avi'>
-                <script type="module" src="/js/polaroid.js"></script>
-            </div>
+            <img alt='avatar' src='images/zk-avi.jpg' id='avi'>
 
         </div>
     </main>
 
 
     <!-- Footer -->
-    <footer class=' row'>
+    <footer class='row'>
         <!-- Weather -->
         <div class='row' id='weather'>
             <svg id='weather-icon'></svg>
