Add project list and interactions

--- a/index.html
+++ b/index.html
@@ -100,8 +100,10 @@
     </header>
 
     <main class='column'>
+
+        <div class='column section'>
         <!-- Title -->
-        <div class='column' id='title'>
+        <div class='column section-header'>
             <h1>Zain Khoja</h1>
             <p class='sh1' id='subtitle'>Software (but also sometimes <a href='play.html' id='secret'>other stuff</a>)
                 designer</p>
@@ -191,7 +193,134 @@
 
         </div>
 
-        <div class='row' id='spacer'></div>
+    </div>
+
+    <div class='column section'>
+        <div class='column section-header'>
+            <h2>Projects</h2>
+            <div class="row" id="project-filters">
+                <button class="row button" data-filter="all" id="selected">
+                    <span class="sh2">All</span>
+                </button>
+                <button class="row button" data-filter="2024">
+                    <span class="sh2">2024</span>
+                </button>
+                <button class="row button" data-filter="2023">
+                    <span class="sh2">2023</span>
+                </button>
+                <button class="row button" data-filter="2022">
+                    <span class="sh2">2022</span>
+                </button>
+                <button class="row button" data-filter="2021">
+                    <span class="sh2">2021</span>
+                </button>
+                <button class="row button" data-filter="2020">
+                    <span class="sh2">2020</span>
+                </button>
+            </div>
+        </div>
+
+
+
+        <div class="column section">
+            <div class="year-group" data-year="2024">
+                <div class="year-row">
+                    <div class="year-label"><h2>2024</h2></div>
+                    <div class="project-list">
+                        <div class="project" data-year="2024">
+                            <h2>Payment release</h2>
+                            <p class="sh2">Require additional approval before releasing bill payments</p>
+                        </div>
+                        <div class="project" data-year="2024">
+                            <h2>Bulk bill import</h2>
+                            <p class="sh2">Import lots of bills to pay via spreadsheets</p>
+                        </div>
+                        <div class="project" data-year="2024">
+                            <h2>Ramp Snake</h2>
+                            <p class="sh2">🐍 🐍 🐍</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="year-group" data-year="2023">
+                <div class="year-row">
+                    <div class="year-label"><h2>2023</h2></div>
+                    <div class="project-list">
+                        <div class="project" data-year="2023">
+                            <h2>Batch payments</h2>
+                            <p class="sh2">Pay multiple bills to vendors in one charge</p>
+                        </div>
+                        <div class="project" data-year="2023">
+                            <h2>Pay by card</h2>
+                            <p class="sh2">Create and deliver single-use cards to pay vendors</p>
+                        </div>
+                        <div class="project" data-year="2023">
+                            <h2>Tables 2.0</h2>
+                            <p class="sh2">Filter, sort, search by keyword, organize columns, customize exports, and save it all to a custom view just for you</p>
+                        </div>
+                        <div class="project" data-year="2023">
+                            <h2>Vendor credits</h2>
+                            <p class="sh2">Use store credit to pay the bill</p>
+                        </div>
+                        <div class="project" data-year="2023">
+                            <h2>Vendor onboarding</h2>
+                            <p class="sh2">Request payment and tax details directly from vendors</p>
+                        </div>
+                        <div class="project" data-year="2023">
+                            <h2>Same-day delivery</h2>
+                            <p class="sh2">Pay late and overdue bills in seconds instead of days</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="year-group" data-year="2022">
+                <div class="year-row">
+                    <div class="year-label"><h2>2022</h2></div>
+                    <div class="project-list">
+                        <div class="project" data-year="2022">
+                            <h2>Cross-border bill payments</h2>
+                            <p class="sh2">Pay vendors around the world in any currency</p>
+                        </div>
+                        <div class="project" data-year="2022">
+                            <h2>International reimbursements</h2>
+                            <p class="sh2">Pay back employees for business expenses anywhere in the world in any currency</p>
+                        </div>
+                        <div class="project" data-year="2022">
+                            <h2>Ramp for iOS</h2>
+                            <p class="sh2">Bring business cards and expenses on-the-go</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="year-group" data-year="2021">
+                <div class="year-row">
+                    <div class="year-label"><h2>2021</h2></div>
+                    <div class="project-list">
+                        <div class="project" data-year="2021">
+                            <h2>Sharable drafts for Reels</h2>
+                            <p class="sh2">Get feedback from your friends on drafts of Reels</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="year-group" data-year="2020">
+                <div class="year-row">
+                    <div class="year-label"><h2>2020</h2></div>
+                    <div class="project-list">
+                        <div class="project" data-year="2020">
+                            <h2>Countdown tool for Reels</h2>
+                            <p class="sh2">Set a countdown to your timer before filming a clip</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </div>
 
     </main>
 
