--- a/play.html
+++ b/play.html
@@ -103,7 +103,7 @@
     <main class='column'>
         <!-- Title -->
         <div class='column' id='title'>
-            <h1>My playground</h1>
+            <h1>Other stuff</h1>
             <p class='sh1' id='subtitle'>Digital and physical nonsense I've made</p>
         </div>
 
